styles.css
html { overflow-y: scroll; }

body {
			background-image: url("background.jpg");
			font-family: Arial, sans-serif;
			margin: 0;
			justify-content: center;
		}

		main { 
			max-width: 800px;
			margin: auto;
			align-self: center;
		}

		section {
			background: white;
			padding: 10px;
			margin-bottom: 15px;
			border-radius: 8px;
			box-shadow: 0 4px 8px rgba(0,0,0,0.1),
						0 12px 24px rgba(0,0,0,0.15);
		}


		h1 {
			background: #222;
			color: lightgreen;
			margin: 0;
			padding: 20px;
			text-align: center;
			box-shadow: 0 4px 8px rgba(0,0,0,0.1);
			}

		  nav a.active {
			text-decoration: underline;
			font-weight: bold;
			background: #222;
			color: white;
		}

		  
		  nav {
			display: flex;
			justify-content: center;
			gap: 35px;
			padding: 5px;
			background: white;
			box-shadow: 0 2px 6px rgba(0,0,0,0.1);
			margin-bottom: 15px;
			border-radius: 0 0 8px 8px;
		}

		  nav a {
			text-decoration: none;
			color: black;
			background: #e0e0e0;
			border-radius: 6px;
			padding: 8px 12px;
			display: inline-block;
			border: 1px solid #000000;
		}

		nav a:hover {
			background: #d0d0d0;
		}

		 .button-link {
			text-decoration: none;
			color: black;
			background: #e0e0e0;
			border-radius: 6px;
			padding: 8px 12px;
			display: inline-block;
			font-weight: 500;
			margin-right: 10px;
			margin-bottom: 10px;
			border: 1px solid #000000;
		}

		 .button-link:hover {
			background: #d0d0d0;
		}

		nav a.active:hover {
			background: #3b3b3b;
		}

		textarea {
			width: 100%;
			height: 120px;
			padding: 8px;
			border-radius: 4px;
			border: 1px solid #ccc;
			resize: vertical;
			box-sizing: border-box;
		}

